# tech-consumption

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  USER_GUIDE.md  package-lock.json  package.json  remote-config.example.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml  tag-and-release.yml
src/: App.css  App.tsx
src-tauri/: 2  Cargo.toml  build.rs  errors.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
