[package]
name = "tech-energy-usage"
version = "1.0.5"
description = "Real Code Ltd AI Tracker"
authors = ["Real Code Ltd"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tech_energy_usage_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = "2"
active-win-pos-rs = "0.10.0"
tokio = { version = "1.50.0", features = ["full"] }
chrono = "0.4.44"
pcap = "2.4.0"
pnet = "0.35.0"
